[package]
name = "mobula_ui"
version = "0.1.0"
authors = ["Isaac Azuelos <isaac@azuelos.ca>"]
edition = "2018"

[[bin]]
name = "mobula"
path = "bin/main.rs"

[workspace]

[dependencies]
mobula = { path = "src/mobula" }

clap = { version = "3.2.12", features = ["wrap_help", "color", "cargo"] }
serde_json = "1.0.82"
